gap fix

--- a/style.scss
+++ b/style.scss
@@ -503,11 +503,9 @@ body {
     }
     .recent__news-row {
         display: flex;
-        justify-content: space-between;
         margin-top: 1.25vw;
-        .__news-col:nth-child(2) {
-            margin: 0 1.25vw;
-        }
+        flex-wrap: wrap;
+        gap: 1.25vw;
         .__news-col {
             display: flex;
             flex-direction: column;
@@ -762,7 +760,9 @@ body {
 .menu {
     width: 14vw;
     .menu__ul {
+        position: sticky;
         list-style: none;
+        top: 2.083vw;
     }
     .menu__list {
         margin-top: 0.83vw;
@@ -847,6 +847,8 @@ body {
         }
     }
     .__menu-content {
+        position: sticky;
+        top: 2.083vw;
         .menu__ul {
             margin-top: 4.16vw;
             .__ul-title {
@@ -1021,12 +1023,14 @@ body {
 .events__content-wrap {
     margin-top: 4.17vw;
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
+    gap: 24px;
 }
 .events__cart {
     border: 1px solid #EDEDED;
     border-radius: 0.83vw;
-    max-width: 36.2vw;
+    max-width: 23.5vw;
     width: 100%;
     height: auto;
     img {
@@ -1070,9 +1074,6 @@ body {
             
             color: #FFFFFF;
         }
-    }
-    &:nth-child(2) {
-        margin: 0 1.25vw;
     }
 }
 .startups__content .news__content-wrap .news__block .news__block-title {
